[project]
name = "reconciliation-api-test"
version = "0.1.0"
description = "Exploration of an alternative to OpenRefine to query OpenCorporates' reconciliation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.4",
    "anywidget>=0.9.13",
    "ipywidgets>=8.1.5",
    "requests>=2.32.3",
    "traitlets>=5.14.3",
    "pandas>=2.2.2",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
